# Stretcher

./: .gitignore  CMakeLists.txt  DistrhoPluginInfo.h  ExtraEventHandlers.cpp  ExtraEventHandlers.hpp  NanoButton.cpp  NanoButton.hpp  NanoSlider.cpp  NanoSlider.hpp  StretcherPlugin.cpp  StretcherUI.cpp  readme.md
.github/workflows/: cmake.yaml
